Fixed buildInfo text alignement
Changed ``left`` to ``right``.

--- a/src/ui/modules/footer/Footer.scss
+++ b/src/ui/modules/footer/Footer.scss
@@ -19,12 +19,15 @@
   }
 
   .projAbout {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+
     .buildinfo {
       padding: 0 10px;
       font-family: 'Fira Sans', sans-serif;
       font-weight: bold;
       font-size: 8pt;
-      text-align: end;
     }
 
     .buildinfo span {
